--- a/frontend/src/components/Footer/DesktopFooter/Footer.module.scss
+++ b/frontend/src/components/Footer/DesktopFooter/Footer.module.scss
@@ -40,7 +40,7 @@
 	font-family: var(--font-heading);
 	font-weight: var(--font-medium);
 	font-size: var(--text-h1-size);
-	letter-spacing: 0.01em;
+	letter-spacing: var(--letter-spacing);
 }
 
 .links {
